# WhisperLiveSubs

./: README.md  check_model.ipynb  pyproject.toml  requirements.txt  whisper-model-fine-tuning.ipynb
